# gfwx

./: .gitignore  CMakeLists.txt
app/: CMakeLists.txt  gfwx_app.cpp  gfwx_app.h  gfwx_color.c  gfwx_color.h  gfwx_file.c  gfwx_file.h  gfwx_image.c  gfwx_image.h  gfwx_img.c  gfwx_img.h  gfwx_time.c  gfwx_time.h  main.cpp
include/gfwx/: gfwx.hpp
libgfwx/: CMakeLists.txt  gfwx.cpp
